feat(ui): inject demo theme loader across templates

--- a/templates/video.html
+++ b/templates/video.html
@@ -267,6 +267,7 @@
     </script>
 
     <script defer src="https://lavescar.com.tr/static/bridge.js"></script>
+    <script defer src="https://lavescar.com.tr/static/demo-theme.js"></script>
 
 </body>
 </html>
