--- a/templates/email.html
+++ b/templates/email.html
@@ -286,6 +286,7 @@
     </script>
 
     <script defer src="https://lavescar.com.tr/static/bridge.js"></script>
+    <script defer src="https://lavescar.com.tr/static/demo-theme.js"></script>
 
 </body>
 </html>
