--- a/templates/resume.html
+++ b/templates/resume.html
@@ -88,6 +88,7 @@
     </script>
 
     <script defer src="https://lavescar.com.tr/static/bridge.js"></script>
+    <script defer src="https://lavescar.com.tr/static/demo-theme.js"></script>
 
 </body>
 </html>
